# uniCode

./: .gitignore  download.js
imageAnalysis/fourierDescriptor/: CMakeCache.txt  CMakeLists.txt  Makefile  Utils.cpp  fd.cpp  fd.h  main.cpp
